# currency-change-ddd

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  package.json  pyproject.toml  test.env
.github/workflows/: code-quality.yml
alembic/: env.py
alembic/versions/: 48d34afa30de_.py  8d7c6b0b03b7_.py
dev/: dev.env
environments/: dev.env  test.env
src/adapters/: databases.py  orm.py  sqlalchemy_repository.py
src/adapters/models/: __init__.py  currency.py
src/adapters/repositories/: apilayer_repository.py  currency_repository.py
src/application/: uow.py
src/application/command_handlers/: currency_command_handler.py
src/application/query_handlers/: currency_query_handler.py
src/commons/: config.py  constants.py  exceptions.py
src/commons/abstracts/: command.py  repository.py  unity_of_work.py
src/commons/middleware/: logger_middleware.py
src/domain/: model.py
src/domain/currency/: commands.py  exceptions.py  models.py
src/entrypoints/: rest_application.py
src/presentation/fastapi/: v1.py
src/presentation/fastapi/resources/: currency.py  health_check.py  healthy.py
src/presentation/fastapi/schemas/: currency.py  pagination.py
tests/: conftest.py
tests/factories/: currency_factory.py
tests/functional/resources/: test_currency.py  test_health_check.py
tests/unit/application_handlers/: test_currency_command_handler.py  test_currency_query_handler.py
tests/unit/resources/: test_currency.py  test_healthy_resource.py
