[tool.poetry]
name = "currency_api"
version = "0.1.0"
description = ""
authors = ["Marlon Leite <marlonleite@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
python-decouple = "^3.6"
python-dotenv = "^0.21.0"
commitizen = "^2.35.0"
SQLAlchemy = "^1.4.42"
alembic = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
pylint = "^2.15.4"
factory-boy = "^3.2.1"
mypy = "^0.982"
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
