[tool.poetry]
name = "currency_api"
version = "0.1.0"
description = ""
authors = ["Marlon Leite <marlonleite@gmail.com>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
python-decouple = "^3.6"
python-dotenv = "^0.21.0"
SQLAlchemy = "^1.4.42"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.5"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
pylint = "^2.15.4"
factory-boy = "^3.2.1"
mypy = "^0.982"
ipython = "^8.5.0"
sqlalchemy2-stubs = "^0.0.2-alpha.29"
pytest-cov = "^4.0.0"
pytest-dotenv = "^0.5.2"
requests-mock = "^1.10.0"
pytest-httpserver = "^1.0.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"

[tool.black]
exclude = 'alembic/versions'

[tool.pytest.ini_options]
addopts = "--tb=short"
testpaths = [
    "tests/",
]
env_override_existing_values = 1
env_files = [
    "environments/test.env",
]

[[tool.mypy.overrides]]
module = [
    "decouple",
    "uvicorn",
    "requests",
]
ignore_missing_imports = true
